--- a/frontend/package.json
+++ b/frontend/package.json
@@ -9,7 +9,8 @@
     "build": "vite build",
     "lint": "eslint .",
     "preview": "vite preview"
-  },  "dependencies": {
+  },
+  "dependencies": {
     "axios": "^1.8.4",
     "leaflet": "^1.9.4",
     "react": "^18.2.0",
